--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
   <div class="relative flex size-full min-h-screen flex-col justify-between group/design-root overflow-x-hidden">
     <!-- HEADER CON HAMBURGER SEMPRE VISIBILE -->
     <header class="shadow-md sticky top-0 z-[100]" style="color: black; background-color: transparent;">
-      <nav class="container mx-auto px-4 py-3 flex justify-between items-center sm:py-5">
-        <a class="text-black text-lg font-bold hover:opacity-80 transition-opacity sm:text-2xl sm:font-bold" href="index.html">Home</a>
-        <div class="relative ml-auto mr-2 sm:mr-4">
+      <nav class="container mx-auto px-2 py-5 flex justify-between items-center sm:py-3">
+        <a class="text-black text-2xl font-extrabold hover:opacity-80 transition-opacity sm:text-lg sm:font-bold" href="index.html">Home</a>
+        <div class="relative ml-auto mr-2 sm:mr-2">
           <button id="menu-btn"
-            class="flex flex-col justify-center items-center w-12 h-12 z-50 sm:w-10 sm:h-10"
+            class="flex flex-col justify-center items-center w-16 h-16 z-50 sm:w-10 sm:h-10"
             aria-label="Open menu">
-            <span class="block w-7 h-1 bg-black mb-1.5 rounded transition-all sm:w-6 sm:h-0.5 sm:mb-1"></span>
-            <span class="block w-7 h-1 bg-black mb-1.5 rounded transition-all sm:w-6 sm:h-0.5 sm:mb-1"></span>
-            <span class="block w-7 h-1 bg-black rounded transition-all sm:w-6 sm:h-0.5"></span>
+            <span class="block w-10 h-2 bg-black mb-2 rounded transition-all sm:w-6 sm:h-0.5 sm:mb-1"></span>
+            <span class="block w-10 h-2 bg-black mb-2 rounded transition-all sm:w-6 sm:h-0.5 sm:mb-1"></span>
+            <span class="block w-10 h-2 bg-black rounded transition-all sm:w-6 sm:h-0.5"></span>
           </button>
         </div>
       </nav>
-      <div id="menu-links" class="absolute top-0 left-1/2 -translate-x-1/2 mt-16 w-[98%] max-w-xs bg-white/90 backdrop-blur-lg shadow-2xl rounded-xl z-40 p-6 flex-col space-y-3 transition-all duration-300 sm:mt-20 sm:w-[60%] sm:max-w-lg">
+      <div id="menu-links" class="absolute top-0 left-1/2 -translate-x-1/2 mt-16 w-[98vw] max-w-xs bg-white/95 backdrop-blur-lg shadow-2xl rounded-xl z-40 p-4 flex-col space-y-3 transition-all duration-300 sm:mt-20 sm:w-[60%] sm:max-w-lg">
         <a class="nav-link w-full text-left block" href="about-me.html">About Me</a>
         <a class="nav-link w-full text-left block" href="skills.html">Skills</a>
         <a class="nav-link w-full text-left block" href="projects.html">Projects</a>
@@ -99,16 +99,15 @@
         <a class="nav-link w-full text-left block" href="image/CV_Giorgia_Spina_JuniorDataEngineer.pdf" target="_blank">Curriculum</a>
       </div>
     </header>
-
-    <main class="flex-grow flex flex-col items-center justify-center p-6 text-center pt-16">
+    <main class="flex-grow flex flex-col items-center justify-center p-2 text-center pt-4 sm:pt-16">
       <div class="w-full max-w-md">
         <div class="mb-8">
-          <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full w-32 h-32 mx-auto mb-4 shadow-lg border-4 border-white" style="background-image: url('image/foto_cv.jpg');"></div>
-          <h1 class="text-slate-900 text-3xl font-bold leading-tight tracking-tight mb-1">Giorgia Spina</h1>
-          <p class="text-[#000080] text-lg font-semibold leading-normal">Junior Data Engineer</p>
-          <p class="text-slate-600 text-md font-medium leading-normal mt-1">Building Data-Driven Solutions</p>
+          <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full w-44 h-44 mx-auto mb-4 shadow-lg border-4 border-white sm:w-32 sm:h-32" style="background-image: url('image/foto_cv.jpg');"></div>
+          <h1 class="text-slate-900 text-4xl font-extrabold leading-tight tracking-tight mb-1 sm:text-3xl sm:font-bold">Giorgia Spina</h1>
+          <p class="text-[#000080] text-2xl font-bold leading-normal sm:text-lg sm:font-semibold">Junior Data Engineer</p>
+          <p class="text-slate-600 text-lg font-semibold leading-normal mt-1 sm:text-md sm:font-medium">Building Data-Driven Solutions</p>
         </div>
-        <p class="text-slate-700 text-lg font-normal leading-relaxed mb-8 px-4">
+        <p class="text-slate-700 text-xl font-normal leading-relaxed mb-8 px-2 sm:text-lg">
           I'm a data engineer passionate about transforming raw data into actionable insights. Explore my projects and let's connect!
         </p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
@@ -124,7 +123,7 @@
 
     <footer class="text-center py-4" style="background-color: transparent;">
       <div class="flex flex-col items-center">
-        <p>Giorgia Spina</p>
+        <p>© 2025 Giorgia Spina. All rights reserved.<br>Built with HTML, CSS, and passion.</p>
       </div>
     </footer>
   </div>
