--- a/projects.html
+++ b/projects.html
@@ -30,44 +30,48 @@
     background-color: #2e7d32; /* Slightly darker green */
   }
   body {
-  min-height: 100vh;
-  overflow-y: auto;
-}
-body {
-  background-image: url('image/foto4.avif');
-  background-size: cover;
-  background-position: center;
-}
-.nav-link {
-  color: #475569;
-  font-weight: 500;
-  padding: 0.5rem 0.75rem;
-  border-radius: 0.375rem;
-  transition: background-color 0.2s ease, color 0.2s ease;
-}
-.nav-link:hover {
-  background-color: #E2E8F0;
-  color: #1E293B;
-}
+    min-height: 100vh;
+    overflow-y: auto;
+  }
+  /* Sfondo come index SOLO per PC */
+  @media (min-width: 640px) {
+    body {
+      background-image: url('image/foto4.avif');
+      background-size: cover;
+      background-position: center;
+      background-color: #f1f5f9; /* fallback */
+    }
+  }
+  .nav-link {
+    color: #475569;
+    font-weight: 500;
+    padding: 0.5rem 0.75rem;
+    border-radius: 0.375rem;
+    transition: background-color 0.2s ease, color 0.2s ease;
+  }
+  .nav-link:hover {
+    background-color: #E2E8F0;
+    color: #1E293B;
+  }
 </style>
 </head>
 <body class="bg-slate-50" onpageshow="document.getElementById('menu-links')?.classList.add('hidden');">
 <div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden" style='font-family: Inter, "Noto Sans", sans-serif;'>
 <!-- HEADER CON HAMBURGER SEMPRE VISIBILE -->
-<header class="shadow-md sticky top-0 z-[100]" style="color: black; background-color: transparent;">
-  <nav class="container mx-auto px-4 py-3 flex justify-between items-center sm:py-5">
-    <a class="text-black text-lg font-bold hover:opacity-80 transition-opacity sm:text-2xl sm:font-bold" href="index.html">Home</a>
-    <div class="relative ml-auto mr-2 sm:mr-4">
+<header class="shadow-md sticky top-0 z-[100]" style="color: black; background-color: #fff;">
+  <nav class="container mx-auto px-2 py-5 flex justify-between items-center sm:py-3">
+    <a class="text-black text-2xl font-extrabold hover:opacity-80 transition-opacity sm:text-lg sm:font-bold" href="index.html">Home</a>
+    <div class="relative ml-auto mr-2 sm:mr-2">
       <button id="menu-btn"
-        class="flex flex-col justify-center items-center w-12 h-12 z-50 sm:w-10 sm:h-10"
+        class="flex flex-col justify-center items-center w-16 h-16 z-50 sm:w-10 sm:h-10"
         aria-label="Open menu">
-        <span class="block w-7 h-1 bg-black mb-1.5 rounded transition-all sm:w-6 sm:h-0.5 sm:mb-1"></span>
-        <span class="block w-7 h-1 bg-black mb-1.5 rounded transition-all sm:w-6 sm:h-0.5 sm:mb-1"></span>
-        <span class="block w-7 h-1 bg-black rounded transition-all sm:w-6 sm:h-0.5"></span>
+        <span class="block w-10 h-2 bg-black mb-2 rounded transition-all sm:w-6 sm:h-0.5 sm:mb-1"></span>
+        <span class="block w-10 h-2 bg-black mb-2 rounded transition-all sm:w-6 sm:h-0.5 sm:mb-1"></span>
+        <span class="block w-10 h-2 bg-black rounded transition-all sm:w-6 sm:h-0.5"></span>
       </button>
     </div>
   </nav>
-  <div id="menu-links" class="absolute top-0 left-1/2 -translate-x-1/2 mt-16 w-[98%] max-w-xs bg-white/90 backdrop-blur-lg shadow-2xl rounded-xl z-40 p-6 flex-col space-y-3 transition-all duration-300 sm:mt-20 sm:w-[60%] sm:max-w-lg">
+  <div id="menu-links" class="absolute top-0 left-1/2 -translate-x-1/2 mt-16 w-[98vw] max-w-xs bg-white/95 backdrop-blur-lg shadow-2xl rounded-xl z-40 p-4 flex-col space-y-3 transition-all duration-300 sm:mt-20 sm:w-[60%] sm:max-w-lg">
     <a class="nav-link w-full text-left block" href="about-me.html">About Me</a>
     <a class="nav-link w-full text-left block" href="skills.html">Skills</a>
     <a class="nav-link w-full text-left block" href="projects.html">Projects</a>
@@ -76,34 +80,32 @@ body {
     <a class="nav-link w-full text-left block" href="image/CV_Giorgia_Spina_JuniorDataEngineer.pdf" target="_blank">Curriculum</a>
   </div>
 </header>
-<div class="flex items-center bg-white p-4 pb-2 justify-between sticky top-0 z-10 shadow-sm">
-<h1 class="text-slate-900 text-xl font-semibold leading-tight flex-1 text-center pr-10">Projects</h1>
-</div>
-<main class="p-4 sm:p-6 flex-grow max-w-[550px] mx-auto">
-<h2 class="text-slate-800 text-2xl font-bold leading-tight tracking-tight px-0 pb-4 pt-2">Featured Projects</h2>
-<div class="space-y-6 pb-6">
-<div class="bg-white rounded-xl shadow-lg overflow-hidden transform transition-all duration-300 hover:shadow-2xl active:scale-[0.98]">
-<img alt="E-commerce Sales Analysis Project Visual" class="w-[550px] mx-auto object-cover" src="image/python-1.png"/>
-<div class="p-5">
-<h3 class="text-slate-900 text-lg font-semibold leading-tight">Billionaires Analysis</h3>
-<p class="text-slate-600 text-sm mt-1 mb-3">Conducted a comprehensive analysis of billionaires' wealth distribution, industries, and geographic trends. This project provides insights into global wealth patterns and influential sectors.</p>
+<main class="p-2 sm:p-6 flex-grow max-w-full sm:max-w-[550px] mx-auto">
+  <h1 class="text-[#0d141c] text-4xl font-extrabold leading-tight tracking-tight text-center py-4 sm:text-3xl sm:font-bold">Projects</h1>
+  <h2 class="text-slate-800 text-2xl font-bold leading-tight tracking-tight px-0 pb-2 pt-2 sm:pb-4">Featured Projects</h2>
+  <div class="space-y-4 pb-6 sm:space-y-6">
+    <div class="bg-white rounded-xl shadow-lg overflow-hidden transform transition-all duration-300 hover:shadow-2xl active:scale-[0.98]">
+      <img alt="E-commerce Sales Analysis Project Visual" class="w-full max-w-xs mx-auto object-cover sm:w-[550px]" src="image/python-1.png"/>
+      <div class="p-3 sm:p-5">
+<h3 class="text-slate-900 text-xl font-bold leading-tight sm:text-lg sm:font-semibold">Billionaires Analysis</h3>
+<p class="text-slate-600 text-base mt-1 mb-3 sm:text-sm">Conducted a comprehensive analysis of billionaires' wealth distribution, industries, and geographic trends. This project provides insights into global wealth patterns and influential sectors.</p>
 <div class="mb-4">
 <span class="inline-block bg-sky-100 text-sky-700 text-xs font-medium mr-2 px-2.5 py-0.5 rounded-full">Python</span>
 <span class="inline-block bg-sky-100 text-sky-700 text-xs font-medium mr-2 px-2.5 py-0.5 rounded-full">MySQL</span>
 </div>
-<div class="flex items-center space-x-3">
+<div class="flex flex-col gap-2 sm:flex-row sm:items-center sm:space-x-3">
   <a
-    class="flex-1 inline-flex items-center justify-center rounded-lg h-10 px-4 text-[#0c3ba8] text-sm font-medium leading-normal shadow-md hover:bg-blue-50 transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-blue-800 focus:ring-offset-2"
+    class="flex-1 inline-flex items-center justify-center rounded-lg h-10 px-4 text-[#0c3ba8] text-base font-semibold leading-normal shadow-md hover:bg-blue-50 transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-blue-800 focus:ring-offset-2 sm:text-sm sm:font-medium"
     href="https://github.com/giorgiaspina/Project_Work.git"
-    style="margin: 10px; border: 2px solid #0c3ba8; background: transparent;"
+    style="margin: 6px; border: 2px solid #0c3ba8; background: transparent;"
   >
     <span class="material-icons mr-2 text-base">visibility</span>
     View Project
   </a>
   <a
-    class="flex-1 inline-flex items-center justify-center rounded-lg h-10 px-4 text-[#0c3ba8] text-sm font-medium leading-normal shadow-md hover:bg-blue-50 transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-blue-800 focus:ring-offset-2"
+    class="flex-1 inline-flex items-center justify-center rounded-lg h-10 px-4 text-[#0c3ba8] text-base font-semibold leading-normal shadow-md hover:bg-blue-50 transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-blue-800 focus:ring-offset-2 sm:text-sm sm:font-medium"
     href="https://vimeo.com/manage/videos/1088471526/b0282ab7a1"
-    style="margin: 10px; border: 2px solid #0c3ba8; background: transparent;"
+    style="margin: 6px; border: 2px solid #0c3ba8; background: transparent;"
   >
     <span class="material-icons mr-2 text-base">play_circle</span>
     Watch Video
@@ -112,16 +114,16 @@ body {
 </div>
 </div>
 <div class="bg-white rounded-xl shadow-lg overflow-hidden transform transition-all duration-300 hover:shadow-2xl active:scale-[0.98]">
-<img alt="Customer Segmentation Project Visual" class="w-[550px] mx-auto object-cover" src="image/powerbilogo.jpg"/>
-<div class="p-5">
-<h3 class="text-slate-900 text-lg font-semibold leading-tight">Data Visualization</h3>
-<p class="text-slate-600 text-sm mt-1 mb-3">Created interactive dashboards to visualize data insights and trends. Utilized Power BI for effective data representation and analysis.</p>
+<img alt="Customer Segmentation Project Visual" class="w-full max-w-xs mx-auto object-cover sm:w-[550px]" src="image/powerbilogo.jpg"/>
+<div class="p-3 sm:p-5">
+<h3 class="text-slate-900 text-xl font-bold leading-tight sm:text-lg sm:font-semibold">Data Visualization</h3>
+<p class="text-slate-600 text-base mt-1 mb-3 sm:text-sm">Created interactive dashboards to visualize data insights and trends. Utilized Power BI for effective data representation and analysis.</p>
 <div class="mb-4">
 <span class="inline-block bg-yellow-200 text-yellow-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded-full">MySQL</span>
 <span class="inline-block bg-yellow-200 text-yellow-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Power BI</span>
 </div>
-<div class="flex items-center space-x-3">
-<a class="flex-1 inline-flex items-center justify-center rounded-lg h-10 px-4 text-[#9a8700] text-sm font-medium leading-normal shadow-md hover:text-[#7a6a00] transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:ring-offset-2" href="https://app.powerbi.com/view?r=eyJrIjoiMmM4ZWU1ZGQtZjA3MC00YzVmLWIyOGItMTU5ZjQwMTljZGI5IiwidCI6IjAyMTUxYzA0LWM1NjctNGNiYy05Mzg4LTI0YmQ1OThkNjM5MCIsImMiOjl9" style="margin: 10px; border: 2px solid #9a8700;">
+<div class="flex flex-col gap-2 sm:flex-row sm:items-center sm:space-x-3">
+<a class="flex-1 inline-flex items-center justify-center rounded-lg h-10 px-4 text-[#9a8700] text-base font-semibold leading-normal shadow-md hover:text-[#7a6a00] transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:ring-offset-2 sm:text-sm sm:font-medium" href="https://app.powerbi.com/view?r=eyJrIjoiMmM4ZWU1ZGQtZjA3MC00YzVmLWIyOGItMTU5ZjQwMTljZGI5IiwidCI6IjAyMTUxYzA0LWM1NjctNGNiYy05Mzg4LTI0YmQ1OThkNjM5MCIsImMiOjl9" style="margin: 6px; border: 2px solid #9a8700;">
     <span class="material-icons mr-2 text-base">visibility</span>
     View Project
 </a>
@@ -129,19 +131,19 @@ body {
 </div>
 </div>
 <div class="bg-white rounded-xl shadow-lg overflow-hidden transform transition-all duration-300 hover:shadow-2xl active:scale-[0.98]">
-<img alt="Backend Development Project Visual" class="w-[550px] mx-auto object-cover" src="image/postman-logo.jpg"/>
-<div class="p-5">
-<h3 class="text-slate-900 text-lg font-semibold leading-tight">Backend Development</h3>
-<p class="text-slate-600 text-sm mt-1 mb-3">Developed backend services using Python and Postman to analyze billionaires by age group, self-made status (True/False), and country. Implemented functionalities for registering new billionaires, deleting records by ID, and managing data efficiently.</p>
+<img alt="Backend Development Project Visual" class="w-full max-w-xs mx-auto object-cover sm:w-[550px]" src="image/postman-logo.jpg"/>
+<div class="p-3 sm:p-5">
+<h3 class="text-slate-900 text-xl font-bold leading-tight sm:text-lg sm:font-semibold">Backend Development</h3>
+<p class="text-slate-600 text-base mt-1 mb-3 sm:text-sm">Developed backend services using Python and Postman to analyze billionaires by age group, self-made status (True/False), and country. Implemented functionalities for registering new billionaires, deleting records by ID, and managing data efficiently.</p>
 <div class="mb-4">
 <span class="inline-block bg-orange-100 text-orange-700 text-xs font-medium mr-2 px-2.5 py-0.5 rounded-full">Python</span>
 <span class="inline-block bg-orange-100 text-orange-700 text-xs font-medium px-2.5 py-0.5 rounded-full">Postman</span>
 </div>
-<div class="flex items-center space-x-3">
+<div class="flex flex-col gap-2 sm:flex-row sm:items-center sm:space-x-3">
 <a
-  class="flex-1 inline-flex items-center justify-center rounded-lg h-10 px-4 text-[#ff6600] text-sm font-medium leading-normal shadow-md hover:bg-orange-50 transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:ring-offset-2"
+  class="flex-1 inline-flex items-center justify-center rounded-lg h-10 px-4 text-[#ff6600] text-base font-semibold leading-normal shadow-md hover:bg-orange-50 transition-colors duration-150 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:ring-offset-2 sm:text-sm sm:font-medium"
   href="https://vimeo.com/manage/videos/1088475236/519227c32f"
-  style="margin: 10px; border: 2px solid #ff6600; background: transparent;"
+  style="margin: 6px; border: 2px solid #ff6600; background: transparent;"
 >
   <span class="material-icons mr-2 text-base">play_circle</span>
   Watch Video
@@ -151,11 +153,11 @@ body {
 </div>
 </div>
 </main>
-<footer class="text-center py-4" style="background-color: transparent;">
-    <div class="flex flex-col items-center">
-      <p>Giorgia Spina</p>
-    </div>
-  </footer>
+<footer class="text-center py-4 sm:py-2 text-sm sm:text-xs" style="background-color: transparent;">
+  <div class="flex flex-col items-center">
+    <p>© 2025 Giorgia Spina. All rights reserved.<br>Built with HTML, CSS, and passion.</p>
+  </div>
+</footer>
 </div>
 <!-- Add script for hamburger menu -->
 <script>
