--- a/projects.html
+++ b/projects.html
@@ -53,6 +53,140 @@
     background-color: #E2E8F0;
     color: #1E293B;
   }
+
+  /* Immagini progetto più grandi e meglio posizionate su tutti i dispositivi */
+  main img.max-w-xs,
+  main img.mx-auto,
+  main img.object-cover {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 90vw;
+    width: 90vw;
+    height: auto;
+    min-width: 0;
+    border-radius: 1.25rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    box-shadow: 0 2px 16px 0 rgba(0,0,0,0.10);
+  }
+  @media (min-width: 640px) {
+    main img.max-w-xs,
+    main img.mx-auto,
+    main img.object-cover {
+      max-width: 520px;
+      width: 100%;
+      height: auto;
+    }
+  }
+
+  /* HEADER più grande SOLO su smartphone */
+  @media (max-width: 639px) {
+    header {
+      padding-top: 1.5rem !important;
+      padding-bottom: 1.5rem !important;
+    }
+    header nav {
+      padding-top: 2rem !important;
+      padding-bottom: 2rem !important;
+    }
+    header a.text-2xl {
+      font-size: 2.25rem !important; /* 36px */
+    }
+    #menu-btn {
+      width: 4.5rem !important;  /* 72px */
+      height: 4.5rem !important; /* 72px */
+    }
+    #menu-btn span {
+      width: 2.75rem !important; /* 44px */
+      height: 0.75rem !important; /* 12px */
+    }
+    /* padding contenitore su mobile */
+    .p-3.sm\:p-5, .p-3, .sm\:p-5 {
+      padding-top: 0.5rem !important;
+    }
+    /* Migliora leggibilità su smartphone */
+    main {
+      font-size: 1.15rem !important;
+      line-height: 1.7 !important;
+      padding-left: 0.5rem !important;
+      padding-right: 0.5rem !important;
+    }
+    main h1, main h2, main h3 {
+      font-size: 1.5em !important;
+      line-height: 1.2 !important;
+      margin-top: 1.2em !important;
+      margin-bottom: 0.7em !important;
+      text-align: center !important;
+    }
+    main h1 {
+      font-size: 2.1em !important;
+    }
+    main h2 {
+      font-size: 1.4em !important;
+    }
+    main h3 {
+      font-size: 1.15em !important;
+    }
+    main .bg-white {
+      box-shadow: 0 2px 16px 0 rgba(0,0,0,0.07);
+      border-radius: 1.2rem !important;
+      padding: 0.7rem !important;
+    }
+    main .text-base, main .text-slate-600, main .text-slate-900, main .text-slate-800 {
+      font-size: 1.08rem !important;
+    }
+    main .rounded-xl {
+      border-radius: 1.2rem !important;
+    }
+    main .flex-col, main .flex {
+      gap: 0.7rem !important;
+    }
+    main .mb-4, main .mb-3, main .pb-6, main .py-4 {
+      margin-bottom: 0.7rem !important;
+      padding-bottom: 0.7rem !important;
+    }
+    main .px-0, main .px-2, main .px-4, main .p-3, main .sm\:p-5 {
+      padding-left: 0.5rem !important;
+      padding-right: 0.5rem !important;
+    }
+    main .rounded-lg {
+      border-radius: 0.9rem !important;
+    }
+    main .inline-block {
+      font-size: 0.98rem !important;
+      padding: 0.3em 0.9em !important;
+    }
+    main .h-10 {
+      height: 2.8rem !important;
+    }
+    main .text-xs, main .text-sm {
+      font-size: 1rem !important;
+    }
+    main .font-semibold, main .font-bold {
+      font-weight: 600 !important;
+    }
+    main .shadow-lg, main .shadow-2xl {
+      box-shadow: 0 2px 16px 0 rgba(0,0,0,0.10) !important;
+    }
+    main .active\:scale-\[0\.98\] {
+      transform: none !important;
+    }
+    main .gap-2, main .gap-4, main .space-y-4, main .space-y-6 {
+      gap: 0.7rem !important;
+      row-gap: 0.7rem !important;
+    }
+    main .rounded {
+      border-radius: 0.7rem !important;
+    }
+    main .border-4 {
+      border-width: 2px !important;
+    }
+    main .sm\:w-\[550px\] {
+      width: 98vw !important;
+      max-width: 98vw !important;
+    }
+  }
 </style>
 </head>
 <body class="bg-slate-50" onpageshow="document.getElementById('menu-links')?.classList.add('hidden');">
