--- a/index.html
+++ b/index.html
@@ -73,26 +73,26 @@
       pointer-events: auto;
     }
 
-    /* HEADER più grande SOLO su smartphone */
+    /* HEADER ancora più grande SOLO su smartphone */
     @media (max-width: 639px) {
       header {
-        padding-top: 1.5rem !important;
-        padding-bottom: 1.5rem !important;
+        padding-top: 3.5rem !important;
+        padding-bottom: 3.5rem !important;
       }
       header nav {
-        padding-top: 2rem !important;
-        padding-bottom: 2rem !important;
+        padding-top: 4rem !important;
+        padding-bottom: 4rem !important;
       }
       header a.text-2xl {
-        font-size: 2.25rem !important; /* 36px */
+        font-size: 3.2rem !important; /* 51px */
       }
       #menu-btn {
-        width: 4.5rem !important;  /* 72px */
-        height: 4.5rem !important; /* 72px */
+        width: 6.5rem !important;  /* 104px */
+        height: 6.5rem !important; /* 104px */
       }
       #menu-btn span {
-        width: 2.75rem !important; /* 44px */
-        height: 0.75rem !important; /* 12px */
+        width: 3.8rem !important; /* 61px */
+        height: 1.2rem !important;   /* 19px */
       }
       /* CONTENUTO principale più grande SOLO su smartphone */
       main .max-w-md {
