--- a/about-me.html
+++ b/about-me.html
@@ -50,23 +50,23 @@
   /* HEADER più grande SOLO su smartphone */
   @media (max-width: 639px) {
     header {
-      padding-top: 1.5rem !important;
-      padding-bottom: 1.5rem !important;
+      padding-top: 3.5rem !important;
+      padding-bottom: 3.5rem !important;
     }
     header nav {
-      padding-top: 2rem !important;
-      padding-bottom: 2rem !important;
+      padding-top: 4rem !important;
+      padding-bottom: 4rem !important;
     }
     header a.text-2xl {
-      font-size: 2.25rem !important; /* 36px */
+      font-size: 3.2rem !important;
     }
     #menu-btn {
-      width: 4.5rem !important;  /* 72px */
-      height: 4.5rem !important; /* 72px */
+      width: 6.5rem !important;
+      height: 6.5rem !important;
     }
     #menu-btn span {
-      width: 2.75rem !important; /* 44px */
-      height: 0.75rem !important; /* 12px */
+      width: 3.8rem !important;
+      height: 1.2rem !important;
     }
     /* Migliora leggibilità su smartphone */
     main {
@@ -150,6 +150,27 @@
     main .w-44, main .h-44 {
       width: 13rem !important;
       height: 13rem !important;
+    }
+  }
+  /* Sfondo bianco alle icone in Key Strengths ed Education SOLO su smartphone */
+  @media (max-width: 639px) {
+    /* Key Strengths icons */
+    .p-2[style*="#000080"] {
+      background: #fff !important;
+      border-radius: 9999px !important;
+      box-shadow: 0 2px 8px 0 rgba(0,0,0,0.04);
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
+    }
+    /* Education icons (se presenti) */
+    .flex.flex-col.gap-2 .p-2 {
+      background: #fff !important;
+      border-radius: 9999px !important;
+      box-shadow: 0 2px 8px 0 rgba(0,0,0,0.04);
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
     }
   }
   </style>
