--- a/about-me.html
+++ b/about-me.html
@@ -50,23 +50,25 @@
   /* HEADER più grande SOLO su smartphone */
   @media (max-width: 639px) {
     header {
-      padding-top: 3.5rem !important;
-      padding-bottom: 3.5rem !important;
+      padding-top: 5rem !important;
+      padding-bottom: 5rem !important;
     }
     header nav {
-      padding-top: 4rem !important;
-      padding-bottom: 4rem !important;
+      padding-top: 7rem !important;
+      padding-bottom: 7rem !important;
     }
     header a.text-2xl {
-      font-size: 3.2rem !important;
+      font-size: 5rem !important; /* 64px */
+      line-height: 1.1 !important;
+      letter-spacing: -0.04em !important;
     }
     #menu-btn {
-      width: 6.5rem !important;
-      height: 6.5rem !important;
+      width: 10rem !important;  /* 128px */
+      height: 10rem !important; /* 128px */
     }
     #menu-btn span {
-      width: 3.8rem !important;
-      height: 1.2rem !important;
+      width: 6rem !important; /* 72px */
+      height: 2.5rem !important; /* 24px */
     }
     /* Migliora leggibilità su smartphone */
     main {
@@ -76,20 +78,20 @@
       padding-right: 0.5rem !important;
     }
     main h1, main h2, main h3 {
-      font-size: 1.5em !important;
+      font-size: 2em !important;
       line-height: 1.2 !important;
       margin-top: 1.2em !important;
       margin-bottom: 0.7em !important;
       text-align: center !important;
     }
     main h1 {
-      font-size: 2.1em !important;
+      font-size: 2.7em !important;
     }
     main h2 {
-      font-size: 1.4em !important;
+      font-size: 2em !important;
     }
     main h3 {
-      font-size: 1.15em !important;
+      font-size: 1.5em !important;
     }
     main .bg-white {
       box-shadow: 0 2px 16px 0 rgba(0,0,0,0.07);
@@ -150,6 +152,151 @@
     main .w-44, main .h-44 {
       width: 13rem !important;
       height: 13rem !important;
+    }
+    /* Sfondo bianco alle icone in Key Strengths ed Education SOLO su smartphone */
+    /* Key Strengths icons */
+    .p-2[style*="#000080"] {
+      background: #fff !important;
+      border-radius: 9999px !important;
+      box-shadow: 0 2px 8px 0 rgba(0,0,0,0.04);
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
+    }
+    /* Education icons (se presenti) */
+    .flex.flex-col.gap-2 .p-2 {
+      background: #fff !important;
+      border-radius: 9999px !important;
+      box-shadow: 0 2px 8px 0 rgba(0,0,0,0.04);
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
+    }
+  }
+  /* HEADER più grande SOLO su smartphone */
+  @media (max-width: 639px) {
+    header {
+      padding-top: 5rem !important;
+      padding-bottom: 5rem !important;
+    }
+    header nav {
+      padding-top: 5rem !important;
+      padding-bottom: 5rem !important;
+    }
+    header a.text-2xl {
+      font-size: 4rem !important; /* 64px */
+      line-height: 1.1 !important;
+      letter-spacing: -0.04em !important;
+    }
+    #menu-btn {
+      width: 8rem !important;  /* 128px */
+      height: 8rem !important; /* 128px */
+    }
+    #menu-btn span {
+      width: 4.5rem !important; /* 72px */
+      height: 1.5rem !important; /* 24px */
+    }
+    /* Migliora leggibilità su smartphone */
+    main {
+      font-size: 1.15rem !important;
+      line-height: 1.7 !important;
+      padding-left: 0.5rem !important;
+      padding-right: 0.5rem !important;
+    }
+    main h1, main h2, main h3 {
+      font-size: 2em !important;
+      line-height: 1.2 !important;
+      margin-top: 1.2em !important;
+      margin-bottom: 0.7em !important;
+      text-align: center !important;
+    }
+    main h1 {
+      font-size: 2.7em !important;
+    }
+    main h2 {
+      font-size: 2em !important;
+    }
+    main h3 {
+      font-size: 1.5em !important;
+    }
+    main .bg-white {
+      box-shadow: 0 2px 16px 0 rgba(0,0,0,0.07);
+      border-radius: 1.2rem !important;
+      padding: 0.7rem !important;
+    }
+    main .text-base, main .text-slate-600, main .text-slate-900, main .text-slate-800 {
+      font-size: 1.08rem !important;
+    }
+    main .rounded-xl {
+      border-radius: 1.2rem !important;
+    }
+    main .flex-col, main .flex {
+      gap: 0.7rem !important;
+    }
+    main .mb-4, main .mb-3, main .pb-6, main .py-4 {
+      margin-bottom: 0.7rem !important;
+      padding-bottom: 0.7rem !important;
+    }
+    main .px-0, main .px-2, main .px-4, main .p-3, main .sm\:p-5 {
+      padding-left: 0.5rem !important;
+      padding-right: 0.5rem !important;
+    }
+    main .rounded-lg {
+      border-radius: 0.9rem !important;
+    }
+    main .inline-block {
+      font-size: 0.98rem !important;
+      padding: 0.3em 0.9em !important;
+    }
+    main .h-10 {
+      height: 2.8rem !important;
+    }
+    main .text-xs, main .text-sm {
+      font-size: 1rem !important;
+    }
+    main .font-semibold, main .font-bold {
+      font-weight: 600 !important;
+    }
+    main .shadow-lg, main .shadow-2xl {
+      box-shadow: 0 2px 16px 0 rgba(0,0,0,0.10) !important;
+    }
+    main .gap-2, main .gap-4, main .space-y-4, main .space-y-6 {
+      gap: 0.7rem !important;
+      row-gap: 0.7rem !important;
+    }
+    main .rounded {
+      border-radius: 0.7rem !important;
+    }
+    main .border-4 {
+      border-width: 2px !important;
+    }
+    main .sm\:w-\[550px\] {
+      width: 98vw !important;
+      max-width: 98vw !important;
+    }
+    /* Immagine profilo più grande */
+    main .w-44, main .h-44 {
+      width: 13rem !important;
+      height: 13rem !important;
+    }
+    /* Sfondo bianco alle icone in Key Strengths ed Education SOLO su smartphone */
+    /* Key Strengths icons */
+    .p-2[style*="#000080"] {
+      background: #fff !important;
+      border-radius: 9999px !important;
+      box-shadow: 0 2px 8px 0 rgba(0,0,0,0.04);
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
+    }
+    /* Education icons (se presenti) */
+    .flex.flex-col.gap-2 .p-2 {
+      background: #fff !important;
+      border-radius: 9999px !important;
+      box-shadow: 0 2px 8px 0 rgba(0,0,0,0.04);
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
     }
   }
   /* Sfondo bianco alle icone in Key Strengths ed Education SOLO su smartphone */
