--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8"/>
+
+  <!-- ✅ Meta tag Open Graph per anteprima social -->
+  <meta property="og:title" content="Giorgia Spina - Junior Data Engineer" />
+  <meta property="og:description" content="Scopri il portfolio di Giorgia Spina, Junior Data Engineer con passione per i dati e le soluzioni intelligenti." />
+  <meta property="og:url" content="https://giorgiaspina.eu.org/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://giorgiaspina.eu.org/image/pres3.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
   <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
   <link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Inter%3Awght%40400%3B500%3B600%3B700%3B900&family=Noto+Sans%3Awght%40400%3B500%3B600%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet"/>
   <title>Giorgia Spina - Junior Data Engineer</title>
@@ -94,7 +104,6 @@
         width: 3.8rem !important; /* 61px */
         height: 1.2rem !important;   /* 19px */
       }
-      /* CONTENUTO principale più grande SOLO su smartphone */
       main .max-w-md {
         max-width: 100vw !important;
       }
@@ -119,7 +128,7 @@
         width: 13rem !important;
         height: 13rem !important;
       }
-      /* Migliora leggibilità su smartphone */
+      
       main {
         font-size: 1.15rem !important;
         line-height: 1.7 !important;
@@ -247,7 +256,7 @@
       </div>
     </main>
 
-    <footer class="text-center py-4" style="background-color: transparent;">
+<footer class="text-center py-4 sm:py-2 text-sm sm:text-xs" style="background-color: transparent;">
       <div class="flex flex-col items-center">
         <p>© 2025 Giorgia Spina. All rights reserved.<br>Built with HTML, CSS, and passion.</p>
       </div>
