aggiunta immagini per pagina web

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
   <link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Inter%3Awght%40400%3B500%3B600%3B700%3B900&family=Noto+Sans%3Awght%40400%3B500%3B600%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet"/>
-  <title>Giorgia Spina - Junior Data Engineer</title>
-  <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
+  <title>🏡 Home</title>
+  <link rel="icon" type="image/png" href="image/foto_cv_tonda.png"/>
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   <style>
     .btn-primary {
