--- a/about-me.html
+++ b/about-me.html
@@ -3,8 +3,8 @@
 <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
 <link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Inter%3Awght%40400%3B500%3B700%3B900&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-<title>Stitch Design - About Me</title>
-<link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
+<title>💁🏻‍♀️ About Me</title>
+<link rel="icon" type="image/png" href="image/foto_cv_tonda.png"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <style>
   body {
