update barra menu

--- a/contacts.html
+++ b/contacts.html
@@ -187,7 +187,7 @@
 <!-- HEADER CON HAMBURGER SEMPRE VISIBILE -->
 <header class="shadow-md sticky top-0 z-[100]" style="color: black; background-color: #fff;">
   <nav class="container mx-auto px-2 py-5 flex justify-between items-center sm:py-3">
-    <a class="text-black text-2xl font-extrabold hover:opacity-80 transition-opacity sm:text-lg sm:font-bold" href="index.html">Home</a>
+<a class="text-black text-2xl font-extrabold hover:opacity-80 transition-opacity sm:text-lg sm:font-bold ml-5" href="index.html">Home</a>
     <div class="relative ml-auto mr-2 sm:mr-2">
       <button id="menu-btn"
         class="flex flex-col justify-center items-center w-16 h-16 z-50 sm:w-10 sm:h-10"
@@ -197,15 +197,15 @@
         <span class="block w-10 h-2 bg-black rounded transition-all sm:w-6 sm:h-0.5"></span>
       </button>
     </div>
-  </nav>
-  <div id="menu-links" class="absolute top-0 left-1/2 -translate-x-1/2 mt-16 w-[98vw] max-w-xs bg-white/95 backdrop-blur-lg shadow-2xl rounded-xl z-40 p-4 flex-col space-y-3 transition-all duration-300 sm:mt-20 sm:w-[60%] sm:max-w-lg">
-    <a class="nav-link w-full text-left block" href="about-me.html">About Me</a>
-    <a class="nav-link w-full text-left block" href="skills.html">Skills</a>
-    <a class="nav-link w-full text-left block" href="projects.html">Projects</a>
-    <a class="nav-link w-full text-left block" href="contacts.html">Contact</a>
-    <a class="nav-link w-full text-left block" href="image/Certificazione_Generation.pdf" target="_blank">Certification</a>
-    <a class="nav-link w-full text-left block" href="image/CV_Giorgia_Spina_JuniorDataEngineer.pdf" target="_blank">Curriculum</a>
-  </div>
+      </nav>
+        <div id="menu-links" class="absolute top-0 right-[29px] mt-16 w-[85vw] max-w-sm bg-white/90 backdrop-blur-md shadow-xl rounded-lg z-40 p-2 flex-col space-y-2 transition-all duration-300 sm:mt-20 sm:w-[60%] sm:max-w-md">
+        <a class="nav-link w-full text-left block hover:bg-gray-100 transition-colors duration-200 rounded-md px-2 py-1" href="about-me.html">About Me</a>
+        <a class="nav-link w-full text-left block hover:bg-gray-100 transition-colors duration-200 rounded-md px-2 py-1" href="skills.html">Skills</a>
+        <a class="nav-link w-full text-left block hover:bg-gray-100 transition-colors duration-200 rounded-md px-2 py-1" href="projects.html">Projects</a>
+        <a class="nav-link w-full text-left block hover:bg-gray-100 transition-colors duration-200 rounded-md px-2 py-1" href="contacts.html">Contact</a>
+        <a class="nav-link w-full text-left block hover:bg-gray-100 transition-colors duration-200 rounded-md px-2 py-1" href="image/Certificazione_Generation.pdf" target="_blank">Certification</a>
+        <a class="nav-link w-full text-left block hover:bg-gray-100 transition-colors duration-200 rounded-md px-2 py-1" href="image/CV_Giorgia_Spina_JuniorDataEngineer.pdf" target="_blank">Curriculum</a>
+      </div>
 </header>
 <main class="flex-grow">
   <h1 class="text-[#0d141c] text-3xl font-extrabold leading-tight tracking-tight text-center py-4">Contact</h1>
